improve the approach section

--- a/doc/paper_draft/360flow.bib
+++ b/doc/paper_draft/360flow.bib
@@ -752,6 +752,24 @@ In this paper we introduce the building blocks for constructing spherical CNNs. 
   keyword   = {Computer Science},
 }
 
+
+@InProceedings{zhao2020spherical,
+	author    = {Zhao, Pengyu and You, Ansheng and Zhang, Yuanxing and Liu, Jiaying and Bian, Kaigui and Tong, Yunhai},
+	booktitle = {AAAI},
+	title     = {Spherical Criteria for Fast and Accurate 360° Object Detection.},
+	year      = {2020},
+	pages     = {12959--12966},
+}
+
+@InProceedings{zioulis2019spherical,
+	author       = {Zioulis, Nikolaos and Karakottas, Antonis and Zarpalas, Dimitrios and Alvarez, Federico and Daras, Petros},
+	booktitle    = {2019 International Conference on 3D Vision (3DV)},
+	title        = {Spherical view synthesis for self-supervised 360 depth estimation},
+	year         = {2019},
+	organization = {IEEE},
+	pages        = {690--699}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
 
 @Comment{jabref-meta: saveOrderConfig:specified;author;false;editor;false;year;true;}
