update exp section

--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -51,6 +51,8 @@
 %\usepackage{amsmath}
 %\usepackage{amssymb}
 \usepackage{booktabs}
+\usepackage{multirow}
+\usepackage{tikz,siunitx,mwe}
 %\usepackage{multirow}
 %\usepackage{url}
 \usepackage{doi}
