--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -45,7 +45,7 @@ We set the unavailable optical flow to 0 both ground truth and estimated optical
 	\hat{E}_{EPE} = \frac{1}{n} \sum_{i \in \Omega} d\left( (\theta^e_i,\phi^e_i), (\theta^g_i,\phi^g_i)\right) 
 \end{equation}
 
-The $\hat{E}_{AAE}$ is metric to measure the deviation of spherical triangle, \cref{equ:exp:aaesph}, the 
+The spherical AAE ($SAAE$) is metric to measure the deviation of spherical triangle, \cref{equ:exp:aaesph}, the 
 % \begin{equation}\label{equ_exp_aae}
 % 	E_{AAE} = \frac{1}{n} \sum_{i \in \Omega}arctan(\frac{u^i_e v^i_g - u^i_g v^i_e}{u^i_e u^i_g + v^i_e v^i_g})
 % \end{equation}
@@ -96,28 +96,47 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 
 \begin{table}[h!]
 	\centering
-	\caption{\label{fig:exp:quality}%
-		Error of Replica dataset}
-	\begin{tabular}{ c | c | c | c | c | c | c }
+	\caption{\label{fig:exp:oferrorquality}%
+		Result of optical flow error on Replica dataset.}
+	\begin{tabular}{c c c c c c c c}
 		\hline
-		& \multicolumn{6}{c}{DIS}  \\
+		 Dataset &  Method & ${EPE}$ & $AAE$ & $RMS$ & $SEPE$ & ${SAAE}$ & ${SRMS}$ \\
 		\hline
-		& ${AAE}$ & ${EPE}$ & ${RMS}$ & ${AAE_{cs}}$ & ${EPE_{cs}}$ & ${RMS_{cs}}$ \\
+		\multirow{3}{*}{Replica(Rotation)} & PWCNet & - & -  & - & - & -& - \\ 
+		 & RAFT & - & -  & - & - & -& - \\ 
+		 & Our & - & -  & - & - & -& - \\ 
 		\hline
-		apartment\_0 & - & - & -  & - & - & -  \\ 
+		\multirow{3}{*}{Replica(Grid)} & PWCNet & - & -  & - & - & -& - \\ 
+		& RAFT & - & -  & - & - & -& - \\ 
+		& Our & - & -  & - & - & -& - \\ 
 		\hline
-		hotel\_0 & - & - & -  & - & - & -  \\ 
+		\multirow{3}{*}{Replica(All)} & PWCNet & - & -  & - & - & -& - \\ 
+		& RAFT & - & -  & - & - & -& - \\ 
+		& Our & - & -  & - & - & -& - \\ 
 		\hline
-		office\_0 & - & - & - & - & - & -  \\ 
-		\hline
-		office\_4 & - & - & -  & - & - & -  \\ 
-		\hline
-		room\_0 & - & - & - & - & - & -  \\ 
-		\hline
-		room\_1 & - & - & -  & - & - & -  \\ 
-		\hline\hline
 	\end{tabular}
 \end{table}
+
+
+\begin{table}[h!]
+	\centering
+	\caption{\label{fig:exp:warpingerrorquality}%
+		Result of optical flow warped image error on Replica and Omniphoto dataset.}
+	\begin{tabular}{c c c c c c c c}
+		\hline
+		Dataset &  Method & ${RMS}$ & $SSIM$ & $SRMS$ & $SSSIM$ \\
+		\hline
+		\multirow{3}{*}{Replica} & PWCNet & - & -  & - & - \\ 
+		& RAFT & - & -  & - & - \\ 
+		& Our & - & -  & - & -  \\ 
+		\hline
+		\multirow{3}{*}{OmniPhoto} & PWCNet & - & -  & - & - \\ 
+		& RAFT & - & -  & - & - \\ 
+		& Our & - & -  & - & - \\ 
+		\hline
+	\end{tabular}
+\end{table}
+
 
 
 \todolist{analyze the error,where is larget, and why good and bad?}
@@ -129,18 +148,42 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 
 \MZY{Our method can process the ego-motion very well, but maybe not good at other motion.}
 
-\begin{figure}[hbt!]
+
+\newcommand{\labeledfig}[4]{
+	\begin{tikzpicture}
+		\draw node[name=micrograph] {\includegraphics[width=#2\textwidth]{#1}}; %the image
+		\draw (micrograph.north west)  node[anchor=north west,yshift=-2,#4]{\textbf{\footnotesize{#3}}}; %image label
+	\end{tikzpicture}
+}
+
+\begin{figure*}[hbt!]
 	\centering
-	\includegraphics[width=0.45\linewidth]{example-image}
-	\caption{Optical Flow from different method.}
-	\label{fig:exp:compflow}
-\end{figure}
+	\begin{tabular}{@{}c*{3}{@{\hspace{-1pt}}c}@{}}
+		\labeledfig{example-image}{0.26}{(a) $I_t$}{white} &
+		\labeledfig{example-image}{0.26}{(b) $I_{t+1}$}{black} &
+		\labeledfig{example-image}{0.26}{(c) Ground Truth}{black}
+		\\[-0.7em]
+		\labeledfig{example-image}{0.26}{(d) Our}{black} &
+		\labeledfig{example-image}{0.26}{(e) PWc-Net}{black} &
+		\labeledfig{example-image}{0.26}{(f) RAFT}{black}
+	\end{tabular}
+	\caption{\label{fig:exp:compflow}
+		The optical flow result on Replica and OmniPhoto.}
+\end{figure*}
 
 \begin{figure}[hbt!]
 	\centering
-	\includegraphics[width=0.45\linewidth]{example-image}
-	\caption{Optical Flow Different method backward warp result.}
-	\label{fig:exp:backwardwarp}
+	\begin{tabular}{@{}c*{3}{@{\hspace{-1pt}}c}@{}}
+	\labeledfig{example-image}{0.26}{(a) $I_t$}{white} &
+	\labeledfig{example-image}{0.26}{(b) $I_{t+1}$}{black} &
+	\labeledfig{example-image}{0.26}{(c) Ground Truth}{black}
+	\\[-0.7em]
+	\labeledfig{example-image}{0.26}{(d) Our}{black} &
+	\labeledfig{example-image}{0.26}{(e) PWc-Net}{black} &
+	\labeledfig{example-image}{0.26}{(f) RAFT}{black}
+\end{tabular}
+	\caption{\label{fig:exp:backwardwarp}
+		The backward warp result with forward optical flow on Omniphoto dataset.}
 \end{figure}
 
 
